added entity User and methods for working with it

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -3,7 +3,9 @@
 <html lang="en">
 
 <body>
-<h1>Welcome to Spring, {{ name }}</h1>
+<h1> {{ user1Login }}</h1>
+<h1> {{ user2Login }}</h1>
+
 </body>
 
 </html>
